# sam2-mask-annotaion

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py
backend/app/: coco_store.py  config.py  edge_service.py  main.py  rle.py  sam2_service.py
backend/app/ai_edges/: __init__.py
backend/app/ai_edges/ddn/: __init__.py  worker.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.tsx  styles.css
scripts/: dev.sh  setup_ddn_edges.sh  setup_sam2.py
tests/: conftest.py  test_api.py  test_coco_store.py  test_rle.py
