[project]
name = "sam2-mask-annotation"
version = "0.1.0"
description = "Browser-based COCO mask correction tool powered by SAM2."
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.136.1",
  "uvicorn[standard]==0.46.0",
  "numpy==2.2.6",
  "opencv-python-headless==4.13.0.92",
  "pillow==12.2.0",
  "pycocotools==2.0.11",
  "pydantic==2.13.3",
  "requests==2.33.1",
]

[project.optional-dependencies]
sam2 = [
  "sam2==1.1.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
